# random-kitchen-sinks

./: .gitignore  CMakeLists.txt  README.md  random_kitchen_sinks.hpp
examples/: fastfood_ex.cpp  fwht_ex.cpp  nystrom_ex.cpp  powerSVD_ex.cpp  rSVD_ex.cpp  rff_ex.cpp  sorf_ex.cpp
include/: random_kitchen_sinks.hpp
src/: PCA.cpp  RFF.cpp  fastfood.cpp  fwht.cpp  nystrom.cpp  sorf.cpp
